--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Projektmanagement Mentoring</title>
+    <title>Ment4You</title>
     <!-- @import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100..900&display=swap'); -->
+    <link rel="icon" type="image/png" href="graphics/favion.png"/>
     <link rel="stylesheet" href="CSS/style.css" />
     <script src="JS/scripts.js"></script>
     <script src="JS/mentorClick.js"></script>
@@ -80,6 +81,6 @@
     </section>
     </div>
 </body>
-<footer>&copy; 2025 Leon Lengert</footer>
+<footer>&copy; 2025 Leon Lengert, Jenny Chan, Paul Chevalier, Marta Zhao-Rezmer </footer>
 
 </html>
