--- a/sites/checklist.html
+++ b/sites/checklist.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Checklist</title>
+    <title>Ment4You</title>
+    <link rel="icon" type="image/png" href="../graphics/favion.png"/>
     <link rel="stylesheet" href="../CSS/style.css" />
     <script src="../JS/scripts.js"></script>
     <script src="../JS/cv-checklist.js"></script>
@@ -29,7 +30,7 @@
     </header>
     <div class="main-content">
       <div class="textBox">
-        <h2>Dein perfekter Lebenslauf</h2>
+        <h2>Your perfect CV</h2>
         <p
           style="
             font-size: 1.2rem;
@@ -38,7 +39,7 @@
             text-align: center;
           "
         >
-          Hake ab, was du bereits erledigt hast.
+          Tick off what you've already done.
         </p>
       </div>
 
@@ -50,33 +51,33 @@
         <div id="checklist">
           <div class="check-item">
             <input type="checkbox" id="item1" class="cv-check" />
-            <label for="item1">Persönliche Daten (Name, E-Mail, Tel.)</label>
+            <label for="item1">Personal data (Name, E-Mail, Phone)</label>
           </div>
           <div class="check-item">
             <input type="checkbox" id="item2" class="cv-check" />
-            <label for="item2">Professionelles Bewerbungsfoto</label>
+            <label for="item2">Professional photo</label>
           </div>
           <div class="check-item">
             <input type="checkbox" id="item3" class="cv-check" />
             <label for="item3"
-              >Strukturierte Arbeitserfahrung (Anti-chronologisch)</label
+              >Structured work experience (Anti-chronological)</label
             >
           </div>
           <div class="check-item">
             <input type="checkbox" id="item4" class="cv-check" />
-            <label for="item4">Bildungsweg (Schule, Studium)</label>
+            <label for="item4">Educational background (School, University)</label>
           </div>
           <div class="check-item">
             <input type="checkbox" id="item5" class="cv-check" />
-            <label for="item5">Besondere Kenntnisse (IT, Sprachen)</label>
+            <label for="item5">Special skills (IT, Languages)</label>
           </div>
           <div class="check-item">
             <input type="checkbox" id="item6" class="cv-check" />
-            <label for="item6">Layout als PDF gespeichert</label>
+            <label for="item6">Layout saved as PDF</label>
           </div>
           <div class="check-item">
             <input type="checkbox" id="item7" class="cv-check" />
-            <label for="item7">Rechtschreibprüfung durchgeführt</label>
+            <label for="item7">Proofread everything</label>
           </div>
         </div>
       </div>
