--- a/sites/mentors/mentorMuellerM.html
+++ b/sites/mentors/mentorMuellerM.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Projektmanagement Mentoring</title>
+    <title>Ment4You</title>
     <!-- @import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100..900&display=swap'); -->
+     <link rel="icon" type="image/png" href="../../graphics/favion.png"/>
     <link rel="stylesheet" href="../../CSS/style.css" />
     <script src="../../JS/scripts.js"></script>
 </head>
