--- a/sites/form.html
+++ b/sites/form.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Questionaire</title>
+    <title>Ment4You</title>
+    <link rel="icon" type="image/png" href="../graphics/favion.png"/>
     <link rel="stylesheet" href="../CSS/style.css" />
     <script src="../JS/scripts.js"></script>
 </head>
