--- a/sites/register.html
+++ b/sites/register.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Register</title>
+    <title>Ment4You</title>
+    <link rel="icon" type="image/png" href="../graphics/favion.png"/>
     <link rel="stylesheet" href="../CSS/style.css" />
     <link rel="stylesheet" href="../CSS/loginStyle.css" />
 </head>
