removed "forgot password" feature

--- a/sites/login.html
+++ b/sites/login.html
@@ -39,8 +39,8 @@
                     <input type="password" id="password" name="password" required />
 
                     <button type="submit" class="register-button">Login</button>
-                    <button type="button" onclick="window.location.href='login.html'" class="register-button">
-                    Forgot password?
+                    <!-- <button type="button" onclick="window.location.href='login.html'" class="register-button">
+                    Forgot password? -->
                     </button>
                     <button type="button" onclick="window.location.href='register.html'" class="register-button">
                     No account yet? Register here
