--- a/sites/mentorLogin.html
+++ b/sites/mentorLogin.html
@@ -38,8 +38,8 @@
                     <input type="password" id="password" name="password" required />
 
                     <button type="submit" class="register-button">Login</button>
-                    <button type="button" onclick="window.location.href='login.html'" class="register-button">
-                    Forgot password?
+                    <!-- <button type="button" onclick="window.location.href='login.html'" class="register-button">
+                    Forgot password? -->
                     </button>
                     <button type="button" onclick="window.location.href='mentorRegister.html'" class="register-button">
                     No Mentor yet? Register here
