added target="_blank" to a tag

--- a/sites/mentors/mentorMuellerM.html
+++ b/sites/mentors/mentorMuellerM.html
@@ -7,6 +7,7 @@
     <!-- @import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100..900&display=swap'); -->
      <link rel="icon" type="image/png" href="../../graphics/favion.png"/>
     <link rel="stylesheet" href="../../CSS/style.css" />
+    <link rel="stylesheet" href="../../CSS/mentorsCV.css" />
     <script src="../../JS/scripts.js"></script>
 </head>
 <body>
@@ -29,6 +30,67 @@
             </div>
         </nav>
         </header>
+        <main class="cv-container">
+            <div class="mentor-card">
+                <aside class="sidebar">
+                    <div class="photo-frame">
+                        <img src="../../graphics/mentor_2_transparent.png" alt="Michael Mueller" class="mentor-photo"/>
+                    </div>
+                    
+                    <section class="contact-info">
+                        <h3>Contact details</h3>
+                        <ul>
+                            <li>
+                                <span class="label">Email:</span>
+                                <a target="_blank" href="mailto:muellerM@ment4you.com">muellerM@ment4you.com</a>
+                            </li>
+                        </ul>
+                    </section>
+
+                    <div class="actions">
+                        <button class="btn-primary" onclick="location.href='../form.html'">Request Mentorship</button>
+                        <button class="btn-secondary" onclick="location.href='../staff.html'">Back</button>
+                    </div>
+                </aside>
+
+                <div class="main-content">
+                    <header>
+                        <h1>Michael Mueller</h1>
+                        <p class="tagline">Senior Software Engineer & Web Developer</p>
+                    </header>
+
+                    <hr>
+
+                    <section class="cv-section">
+                        <h3>Field of Expertise</h3>
+                        <p>Software Engineering, Web Development</p>
+                    </section>
+
+                    <section class="cv-section">
+                        <h3>Professional Experience</h3>
+                        <p><strong>10 years in the tech industry</strong></p>
+                        <p>Specialization in Full-Stack Development and Project Management.</p>
+                    </section>
+
+                    <section class="cv-section">
+                        <h3>About me</h3>
+                        <p>Hi! I'm Michael, a passionate software engineer with a love for teaching and mentoring. I enjoy helping others grow their skills and navigate their careers in tech.</p>
+                    </section>
+
+                    <section class="cv-section">
+                        <h3>Core Skills</h3>
+                        <ul style="list-style: none; padding: 0; display: flex; flex-wrap: wrap; gap: 10px;">
+                            <li style="background: #e1e8ed; padding: 5px 12px; border-radius: 15px; font-size: 0.9rem;">Full-Stack Dev</li>
+                            <li style="background: #e1e8ed; padding: 5px 12px; border-radius: 15px; font-size: 0.9rem;">JavaScript / TypeScript</li>
+                            <li style="background: #e1e8ed; padding: 5px 12px; border-radius: 15px; font-size: 0.9rem;">React & Node.js</li>
+                            <li style="background: #e1e8ed; padding: 5px 12px; border-radius: 15px; font-size: 0.9rem;">Cloud Architecture</li>
+                            <li style="background: #e1e8ed; padding: 5px 12px; border-radius: 15px; font-size: 0.9rem;">Agile Leadership</li>
+                        </ul>
+                    </section>
+                </div>
+            </div>
+        </main>
+    
     </div>
 </body>
 </html>
