--- a/sites/mentors/mentorSchmidtS.html
+++ b/sites/mentors/mentorSchmidtS.html
@@ -7,6 +7,7 @@
     <!-- @import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100..900&display=swap'); -->
      <link rel="icon" type="image/png" href="../../graphics/favion.png"/>
     <link rel="stylesheet" href="../../CSS/style.css" />
+    <link rel="stylesheet" href="../../CSS/mentorsCV.css" />
     <script src="../../JS/scripts.js"></script>
 </head>
 <body>
@@ -29,6 +30,64 @@
             </div>
         </nav>
         </header>
+        <main class="cv-container">
+            <div class="mentor-card">
+                <aside class="sidebar">
+                    <div class="photo-frame">
+                        <img src="../../graphics/mentor_1_transparent.png" alt="Michael Mueller" class="mentor-photo"/>
+                    </div>
+                    
+                    <section class="contact-info">
+                        <h3>Contact details</h3>
+                        <ul>
+                            <li>
+                                <span class="label">Email:</span>
+                                <a target="_blank" href="mailto:schmidtS@ment4you.com">schmidtS@ment4you.com</a>
+                            </li>
+                        </ul>
+                    </section>
+
+                    <div class="actions">
+                        <button class="btn-primary" onclick="location.href='../form.html'">Request Mentorship</button>
+                        <button class="btn-secondary" onclick="location.href='../staff.html'">Back</button>
+                    </div>
+                </aside>
+
+                <div class="main-content">
+                    <header>
+                        <h1>Sarah Schmidt</h1>
+                        <p class="tagline">Agile Coach & Senior Project Manager</p>
+                    </header>
+
+                    <hr>
+
+                    <section class="cv-section">
+                        <h3>Field of Expertise</h3>
+                        <p>Agile Methodologies (Scrum, Kanban), Lean Management, Team Leadership</p>
+                    </section>
+
+                    <section class="cv-section">
+                        <h3>Professional Experience</h3>
+                        <p><strong>10 years in the tech industry</strong></p>
+                        <p>Extensive background in guiding cross-functional teams and implementing agile frameworks to streamline software delivery and boost productivity.</p>
+                    </section>
+
+                    <section class="cv-section">
+                        <h3>About me</h3>
+                        <p>I am an enthusiast for agile transformations and organizational growth. My mission is to empower teams to work more effectively by fostering a culture of continuous improvement, transparency, and collaboration.</p>
+                    </section>
+                    <section class="cv-section">
+                        <h3>Core Skills</h3>
+                        <ul style="list-style: none; padding: 0; display: flex; flex-wrap: wrap; gap: 10px;">
+                            <li style="background: #e1e8ed; padding: 5px 12px; border-radius: 15px; font-size: 0.9rem;">Scrum Master & Product Owner Mentoring</li>
+                            <li style="background: #e1e8ed; padding: 5px 12px; border-radius: 15px; font-size: 0.9rem;">Strategic Roadmap Planning</li>
+                            <li style="background: #e1e8ed; padding: 5px 12px; border-radius: 15px; font-size: 0.9rem;">Conflict Resolution & Facilitation</li>
+                            <li style="background: #e1e8ed; padding: 5px 12px; border-radius: 15px; font-size: 0.9rem;">Jira & Confluence Administration</li>
+                        </ul>
+                    </section>
+                </div>
+            </div>
+        </main>
     </div>
 </body>
 </html>
