--- a/sites/mentors/mentorWeberJ.html
+++ b/sites/mentors/mentorWeberJ.html
@@ -7,6 +7,7 @@
     <!-- @import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100..900&display=swap'); -->
      <link rel="icon" type="image/png" href="../../graphics/favion.png"/>
     <link rel="stylesheet" href="../../CSS/style.css" />
+    <link rel="stylesheet" href="../../CSS/mentorsCV.css" />
     <script src="../../JS/scripts.js"></script>
 </head>
 <body>
@@ -29,6 +30,66 @@
             </div>
         </nav>
         </header>
+        <main class="cv-container">
+    <div class="mentor-card">
+        <aside class="sidebar">
+            <div class="photo-frame">
+                <img src="../../graphics/mentor_3_transparent.png" alt="Julia Weber" class="mentor-photo"/>
+            </div>
+            
+            <section class="contact-info">
+                <h3>Contact details</h3>
+                <ul>
+                    <li>
+                        <span class="label">Email:</span>
+                        <a target="_blank" href="mailto:weberJ@ment4you.com">weberJ@ment4you.com</a>
+                    </li>
+                </ul>
+            </section>
+
+            <div class="actions">
+                <button class="btn-primary" onclick="location.href='../form.html'">Request Mentorship</button>
+                <button class="btn-secondary" onclick="location.href='../staff.html'">Back</button>
+            </div>
+        </aside>
+
+        <div class="main-content">
+            <header>
+                <h1>Julia Weber</h1>
+                <p class="tagline">Leadership Consultant & Project Director</p>
+            </header>
+
+            <hr>
+
+            <section class="cv-section">
+                <h3>Field of Expertise</h3>
+                <p>Soft Skills Development, Global Team Leadership, International Project Management</p>
+            </section>
+
+            <section class="cv-section">
+                <h3>Professional Experience</h3>
+                <p><strong>10 years in the tech industry</strong></p>
+                <p>Expertise in managing international large-scale projects and fostering high-performance team leadership.</p>
+            </section>
+
+            <section class="cv-section">
+                <h3>About me</h3>
+                <p>Hi! I'm Julia, a specialist in the human side of technology. I am passionate about guiding teams through the complexities of international collaboration and empowering leaders to build strong, empathetic, and effective work environments.</p>
+            </section>
+
+            <section class="cv-section">
+                <h3>Core Skills</h3>
+                <ul style="list-style: none; padding: 0; display: flex; flex-wrap: wrap; gap: 10px;">
+                    <li style="background: #e1e8ed; padding: 5px 12px; border-radius: 15px; font-size: 0.9rem;">Emotional Intelligence</li>
+                    <li style="background: #e1e8ed; padding: 5px 12px; border-radius: 15px; font-size: 0.9rem;">Cross-Cultural Leadership</li>
+                    <li style="background: #e1e8ed; padding: 5px 12px; border-radius: 15px; font-size: 0.9rem;">Conflict Resolution</li>
+                    <li style="background: #e1e8ed; padding: 5px 12px; border-radius: 15px; font-size: 0.9rem;">Stakeholder Management</li>
+                    <li style="background: #e1e8ed; padding: 5px 12px; border-radius: 15px; font-size: 0.9rem;">Facilitation</li>
+                </ul>
+            </section>
+        </div>
+    </div>
+</main>
     </div>
 </body>
 </html>
