--- a/sites/winder.html
+++ b/sites/winder.html
@@ -61,7 +61,7 @@
         <div id="result">
             <h2> No one left</h2>
             <p>You have swiped through all available mentors.<br>
-            <a href="contact.html">Contact</a> us and we will help you find the right one!</p>
+            <a target="_blank" href="mailto:contact@ment4you.com">Contact</a> us and we will help you find the right one!</p>
             <button type="button" onclick="location.reload()">Restart</button>
         </div>
     </div>
