--- a/sites/form.html
+++ b/sites/form.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Ment4You</title>
-    <link rel="icon" type="image/png" href="../graphics/favion.png"/>
+    <link rel="icon" type="image/png" href="../graphics/favicon.png"/>
     <link rel="stylesheet" href="../CSS/style.css" />
     <script src="../JS/scripts.js"></script>
 </head>
@@ -103,6 +103,15 @@
                     <option value="HR">HR</option>
                     <option value="Sales">Sales</option>
                     <option value="Project Management">Project Management</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label for="where">Where do you prefer to meet:</label>
+                <select id="where" name="where" required>
+                    <option value="Online">Online</option>
+                    <option value="In person">In person</option>
+                    <option value="Hybrid">Hybrid</option>
                 </select>
             </div>
 
