--- a/sites/staff.html
+++ b/sites/staff.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Ment4You</title>
-    <link rel="icon" type="image/png" href="../graphics/favion.png"/>
+    <link rel="icon" type="image/png" href="../graphics/favicon.png"/>
     <link rel="stylesheet" href="../CSS/style.css" />
     <script src="../JS/mentorClick.js"></script>
     <script src="../JS/scripts.js"></script>
