--- a/sites/mentors/mentorWeberJ.html
+++ b/sites/mentors/mentorWeberJ.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Ment4You</title>
     <!-- @import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100..900&display=swap'); -->
-     <link rel="icon" type="image/png" href="../../graphics/favion.png"/>
+     <link rel="icon" type="image/png" href="../../graphics/favicon.png"/>
     <link rel="stylesheet" href="../../CSS/style.css" />
     <link rel="stylesheet" href="../../CSS/mentorsCV.css" />
     <script src="../../JS/scripts.js"></script>
