Contacts button only visible when signed in

--- a/sites/mentors/mentorMuellerM.html
+++ b/sites/mentors/mentorMuellerM.html
@@ -47,7 +47,7 @@
                         </ul>
                     </section>
 
-                    <div class="actions">
+                    <div class="actions" id="contactsStuff">
                         <button class="btn-primary" onclick="location.href='../form.html'">Request Mentorship</button>
                         <button class="btn-secondary" onclick="location.href='../staff.html'">Back</button>
                     </div>
